# hw4

./: .gitignore  README.txt  hw4-pt0.c
3way-pthread/: CMakeLists.txt  Makefile  README_pthread.txt  pthread_main.c  pthread_shell.sh
3way-pthread/include/: README_pthread.txt  pthread_main.c
3way-pthread/mains_and_outs/mo_100k/: README_pthread_100k.txt  cores_100k_pthread.sh  pthread-100k-batch.sh  pthreads-100k
3way-pthread/mains_and_outs/mo_10k/: README_pthread_10k.txt  cores_10k_pthread.sh  pthread-10k-batch.sh  pthreads-10k
3way-pthread/mains_and_outs/mo_1k/: README_pthread_1k.txt  cores_1k_pthread.sh  pthread-1k-batch.sh  pthreads-1k
3way-pthread/mains_and_outs/mo_1mil/: README_pthread_1mil.txt  cores_1mil_pthread.sh  pthread-1mil-batch.sh  pthreads-1mil  test.txt
3way-pthread/times/times_for_100k/: time-1-30463.txt  time-1-9482.txt  time-1-9985.txt  time-16-15135.txt  time-16-257.txt  time-16-9158.txt  time-2-14038.txt  time-2-15525.txt  time-2-5836.txt  time-4-13471.txt  time-4-21793.txt  time-4-31212.txt  time-8-29927.txt  time-8-6618.txt  time-8-9130.txt  time-from-code-1-29259.txt  time-from-code-1-5526.txt  time-from-code-1-5954.txt  time-from-code-16-13405.txt  time-from-code-16-27066.txt  time-from-code-16-5279.txt  time-from-code-2-11722.txt  time-from-code-2-18887.txt  time-from-code-2-27208.txt  time-from-code-4-14784.txt  time-from-code-4-32400.txt  time-from-code-4-8222.txt  time-from-code-8-11829.txt  time-from-code-8-14997.txt  time-from-code-8-15565.txt
3way-pthread/times/times_for_10k/: time-1-10266.txt  time-1-19947.txt  time-1-2143.txt  (+37 more)
(+332 files in other folders)
